--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 	<style>
-		#container {
-			background-color: #FFFFFF;
+		#container, #holder {
+			background-color: #ffffff;
 			background-size: 22px 22px;
 			background-image:
 				-webkit-repeating-linear-gradient(45deg, rgba(127, 191, 255, .4), rgba(127, 191, 255, .4) 1px, transparent 2px, transparent 15px),
@@ -42,9 +42,11 @@
 	<input type="button" class="removeSubIdea" value="delete"></input>
 	<input type="button" onclick="mapModel.setInputEnabled(false)" value="disable"></input>
 	<input type="button" onclick="mapModel.setInputEnabled(true)" value="enable"></input>
-	<div id="container"></div>
+	<div id="holder" data-text="More than just text"></div>
+	<!--div id="container"></div-->
 	<script type="text/javascript" src="../lib/jquery-1.9.0.js"></script>
 	<script type="text/javascript" src="../lib/underscore-1.4.3-min.js"></script>
+	<script type="text/javascript" src="../lib/raphael.js"></script>
 	<script type="text/javascript" src="../lib/kinetic-v4.2.0-custom-min.js"></script>
 	<script type="text/javascript" src="../src/kinetic.idea.js"></script>
 	<script type="text/javascript" src="../src/kinetic.connector.js"></script>
@@ -53,30 +55,27 @@
 	<script type="text/javascript" src="../src/layout.js"></script>
 	<script type="text/javascript" src="../src/map-model.js"></script>
 	<script type="text/javascript" src="../src/kinetic-mediator.js"></script>
+	<script type="text/javascript" src="../src/raphael-mediator.js"></script>
 	<script type="text/javascript" src="../src/map-toolbar-widget.js"></script>
+	<script type="text/javascript" src="../src/keyboard-widget.js"></script>
 	<script type="text/javascript" src="testtree.js"></script>
 	<script>
 		(function () {
 			window.onerror = alert;
 			var container = jQuery('#container'),
-				stage = new Kinetic.Stage({
-					container: 'container',
-					draggable: true
-				}),
+				holder = jQuery('#holder'),
+				stage = Raphael("holder", "100%", "100%"),
 				idea = content(test_tree()),
-				mapModel = new MAPJS.MapModel(MAPJS.KineticMediator.layoutCalculator, ['A brilliant idea...', 'A cunning plan...', 'We\'ll be famous...']),
-				mediator = new MAPJS.KineticMediator(mapModel, stage),
+				mapModel = new MAPJS.MapModel(MAPJS.RaphaelMediator.layoutCalculator, ['A brilliant idea...', 'A cunning plan...', 'We\'ll be famous...']),
+				mediator = new MAPJS.RaphaelMediator(mapModel, stage),
 				setStageDimensions = function () {
-					stage.setWidth(container.width());
-					stage.setHeight(container.height());
-					stage.draw();
+					stage.setViewBox(-0.5 * holder.width(), -0.5 * holder.height(), holder.width(), holder.height());
 				};
 			setStageDimensions();
-			stage.attrs.x = 0.5 * stage.getWidth();
-			stage.attrs.y = 0.5 * stage.getHeight();
 			mapModel.setIdea(idea);
 			$(window).resize(setStageDimensions);
 			jQuery('body').mapToolbarWidget(mapModel);
+			jQuery(document).keyboardWidget(mapModel);
 			window.mapModel = mapModel;
 			mapModel.addEventListener('analytic', console.log.bind(console));
 		}());
