--- a/test/index.html
+++ b/test/index.html
@@ -47,6 +47,15 @@
 				background-color: green;
 				color: white;
 			}
+			#minimap {
+				top:50px;
+				left:10px;
+				z-index:900000;
+				position:absolute;
+				max-height:400px;
+				max-width:400px;
+				border:1px solid #888888;
+			}
 		</style>
 
 		<input type="button" class="resetView" value="0"></input>
@@ -83,6 +92,7 @@
 			<button class="arrow">Arrow</button>
 		</div>
 		<div id="container"></div>
+		<img id="minimap"></img>
 		<script type="text/javascript" src="../lib/jquery-2.0.2.min.js"></script>
 		<script type="text/javascript" src="../lib/jquery.mousewheel-3.1.3.js"></script>
 		<script src="../lib/jquery.hotkeys.js"></script>
@@ -108,6 +118,7 @@
 		<script type="text/javascript" src="../src/png-exporter.js"></script>
 		<script type="text/javascript" src="../src/map-widget.js"></script>
 		<script type="text/javascript" src="../src/link-edit-widget.js"></script>
+		<script type="text/javascript" src="../src/mini-map-widget.js"></script>
 		<script type="text/javascript" src="testtree.js"></script>
 		<script>
 			jQuery.fn.attachmentEditorWidget = function (mapModel) {
@@ -133,6 +144,7 @@
 				renderImages = false,
 				mapModel = new MAPJS.MapModel(MAPJS.KineticMediator.layoutCalculator, ['A brilliant idea...', 'A cunning plan...', 'We\'ll be famous...'], ['hoo har']);
 				container.mapWidget(console,mapModel, isTouch, renderImages);
+
 				jQuery('body').mapToolbarWidget(mapModel);
 				jQuery('body').attachmentEditorWidget(mapModel);
 				$("[data-mm-action='export-image']").click(function () {
@@ -146,6 +158,8 @@
 				jQuery('.arrow').click(function () {
 					jQuery(this).toggleClass('active');
 				});
+				window.stage = container.data('mm-stage');
+				jQuery('#minimap').miniMapWidget(mapModel, container.data('mm-stage'), 300);
 			}());
 		</script>
 		<script src="perftests.js"></script>
