--- a/test/domrender.html
+++ b/test/domrender.html
@@ -94,6 +94,20 @@
 					});
 				});
       };
+      $.fn.copyStyle = function (domNode) {
+        var self = this, domStyle = window.getComputedStyle(domNode);
+        _.each(domStyle, function (prop) { self.css(prop, domStyle[prop]) });
+        return self;
+      };
+      $.fn.cloneAndStyle = function () {
+        var result= $();
+        this.each(function () {
+            var domNode = this,
+                domClone = $(domNode).clone().attr('class', '').copyStyle(domNode);
+            result = result.add(domClone);
+        });
+        return result;
+      };
       $.fn.toSVG = function () {
         var source = this,
             offset = {
@@ -105,15 +119,19 @@
           source.find('svg').each(function () {
             var objectToClone = $(this),
               clone = MAPJS.createSVG('g').appendTo(result);
-            clone.attr('transform', 'translate(' + (offset.x + objectToClone.position().left)+',' + (offset.y + objectToClone.position().top) +')');
-            objectToClone.children().clone().appendTo(clone);
+              clone.attr('transform', 'translate(' + (offset.x + objectToClone.position().left)+',' + (offset.y + objectToClone.position().top) +')');
+            objectToClone.children().cloneAndStyle().appendTo(clone);
           });
           MAPJS.createSVG('foreignObject').attr({'width': '100%','height': '100%'}).appendTo(result).append(domContainer);
           source.children().not('svg').each(function () {
             var objectToClone = $(this),
-            clone = $(this).clone().attr('id','').appendTo(domContainer).css({'left': (objectToClone.data('x') + offset.x), 'top': objectToClone.data('y') + offset.y});
+            clone = objectToClone.clone().attr({class: '', id:''}).appendTo(domContainer).copyStyle(this);
+            objectToClone.children().each(function () {
+              var role = this.getAttribute('data-mapjs-role');
+              clone.find('[data-mapjs-role=' + role + ']').copyStyle(this);
+            });
+            clone.css({'left': (objectToClone.data('x') + offset.x), 'top': objectToClone.data('y') + offset.y});
           });
-          
           return result;
       };
       window.toImg = function () {
